# dap-dbgeng

./: .clang-tidy  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  package.json  requirements-docs.txt  vcpkg.json
.claude/rules/: cpp-style.md  documentation.md  generated-protocol.md  markdown.md  precompiled-header.md  testing.md  threading.md
.claude/skills/dap-analyze-trace/: SKILL.md
.claude/skills/dap-feature-recording-loop/: SKILL.md
.claude/skills/dap-request-coverage/: SKILL.md
.claude/skills/dap-request-review/: SKILL.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: getting-started.md  index.md  troubleshooting.md
docs/assets/: extra.css
docs/development/: recording-fixtures.md  request-coverage.md
docs/reference/: attach.md  features.md  index.md  launch.md
docs/scenarios/: attach.md  driver-debugging.md  index.md  local-debugging.md  remote-debugging.md
protgen/: protogen.py
scripts/: Bundle-Adapter.ps1  Format-DapSessionFlow.ps1  Format-Docs.ps1  Format.ps1  Get-DapRequestMatrix.ps1  Normalize-DapRecording.ps1  Record-FeatureFixtures.mjs  Verify-ReleaseVersion.ps1  With-DevEnv.ps1
src/: CMakeLists.txt  main.cpp  stdafx.h
src/core/: channel.h  event_sink.h  task_queue.h
src/dap/: dap_server.cpp  dap_server.h
src/debugger/: debugger_session.cpp  debugger_session.h  debugger_session_breakpoints.cpp  debugger_session_command.cpp  debugger_session_execution.cpp  debugger_session_inspection.cpp  debugger_session_internal.h  debugger_session_memory.cpp  debugger_session_symbols.cpp  debugger_session_targets.cpp  debugger_session_threads.cpp  debugger_types.h
src/protocol/: CMakeLists.txt  dap_service.h  protocol.cpp  protocol.h
src/service/: dap_server.cpp  dap_server.h  dap_server_attach.cpp  dap_server_configuration_done.cpp  dap_server_continue.cpp  dap_server_data_breakpoint_info.cpp  dap_server_disassemble.cpp  dap_server_disconnect.cpp  dap_server_evaluate.cpp  dap_server_exception_info.cpp  dap_server_initialize.cpp  dap_server_launch.cpp  dap_server_modules.cpp  dap_server_next.cpp  dap_server_pause.cpp  dap_server_read_memory.cpp  dap_server_scopes.cpp  dap_server_session_events.cpp  dap_server_set_breakpoints.cpp  dap_server_set_data_breakpoints.cpp  dap_server_set_exception_breakpoints.cpp  dap_server_set_expression.cpp  dap_server_set_function_breakpoints.cpp  dap_server_set_instruction_breakpoints.cpp  dap_server_set_variable.cpp  dap_server_source.cpp  dap_server_stack_trace.cpp  dap_server_step_in.cpp  dap_server_step_out.cpp  dap_server_terminate.cpp  dap_server_threads.cpp  dap_server_variables.cpp  dap_server_write_memory.cpp
src/transport/: dap_message_writer.h  dap_trace_recorder.cpp  dap_trace_recorder.h  io_stream_server.cpp  io_stream_server.h
src/util/: base64.h  dap_argument_reader.cpp  dap_argument_reader.h  dap_message_inspector.cpp  dap_message_inspector.h  debugger_session_dap_factory.cpp  debugger_session_dap_factory.h  debugger_session_dispatcher.cpp  debugger_session_dispatcher.h  string_utils.h  windbg_command_classifier.cpp  windbg_command_classifier.h
test-targets/sys/: CMakeLists.txt  README.md  Restore-Wdk.ps1  packages.config
test-targets/sys/cmake/: FindWDKNuGet.cmake
test-targets/sys/src/: hello.c
test-targets/testapp/: CMakeLists.txt  attach.cpp  data-1.cpp  exception-1.cpp  launch.cpp  struct-1.cpp
tests/: CMakeLists.txt
tests/core/: channel_tests.cpp
tests/dap/: dap_server_tests.cpp
tests/debugger/integration/: debugger_session_tests.cpp
tests/protocol/: protocol_tests.cpp
tests/replay/: replay_harness.cpp  replay_harness.h  replay_tests.cpp
tests/replay/data/: attach-process.json  attach-remote-process.json  basic-debug.json  data-breakpoints.json  exception-filter.json  function-breakpoints.json  instruction-breakpoints.json  launch-breakpoint-open-disassembly.json  launch-breakpoint-stepover-exit.json  launch-conditional-breakpoint.json  launch-disassembly-step.json  launch-setVariable.json  launch-step-in-over-out.json  launch-step-restart-run.json  launch-stopAtEntry-breakpoint-continue-exit.json  launch-stopAtEntry-continue-exit.json  launch-stopAtEntry-stop.json  memory-read-write.json  modules-memory.json  set-expression.json  struct-locals.json  struct-setVariable.json  threads-after-exit.json
tests/service/: dap_server_handler_tests.cpp  dap_server_live_tests.cpp  dap_server_tests.cpp
tests/support/: test_environment.cpp  test_environment.h
tests/transport/: dap_trace_recorder_tests.cpp
tests/util/: base64_tests.cpp  dap_argument_reader_tests.cpp  debugger_session_dap_factory_tests.cpp
vscode/: .vscodeignore  CHANGELOG.md  LICENSE.md  README.md  extension.js  package-lock.json  package.json
